--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altair==4.2.0
 keras==2.11.0
 matplotlib==3.5.2
 numpy==1.21.5
-pandas==1.4.4
+pandas<1.4.4
 pandas_datareader==0.10.0
 Pillow==9.4.0
 requests==2.28.1
